--- a/projects.json
+++ b/projects.json
@@ -548,6 +548,15 @@
         "Src": "https://github.com/rubinliudongpo/airad",
         "Submitter": "rubinliudongpo",
         "Date": "2018-4-05"
+    },
+    {
+ 	"Name": "sysmon",
+ 	"Thumb": "sysmon/thumb.jpg",
+ 	"Desc": "sysmon 是一个为 Linux 开发的前后端分离的系统资源监视器，在服务器上启动后台服务之后，可以通过任意一个能够访问该服务器的浏览器查看系统资源使用状况",
+ 	"Url": "https://athena-bookshelf.com:2048",
+ 	"Src": "https://github.com/Lt0/sysmon",
+ 	"Submitter": "lightime",
+ 	"Date": "2018-8-20"
     }
     ]
 }
